# community-search

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  community-search.md
.github/workflows/: docker.yml
db/: schema.sql
docs/: COMMUNITY_SEARCH_PROTOCOL.md  spec.md
scripts/: docker-build-push.sh
src/: collections.rs  config.rs  lib.rs  main.rs  protocol.rs  test_support.rs  testing.rs
src/api/: auth.rs  auth_attempts.rs  gossip.rs  mcp.rs  mod.rs  public.rs  rate_limit.rs  router.rs  sse.rs  ui.rs
src/auth/: token.rs
src/crawler/: canonical.rs  driver.rs  error.rs  fetcher.rs  mod.rs  page.rs  parser.rs  robots.rs  scheduler.rs  sitemap.rs  url_class.rs
src/db/: collections.rs  crawl_targets.rs  crawled_pages.rs  migrations.rs  mod.rs  models.rs  outlink_hosts.rs  ranking_config.rs  settings.rs
src/federation/: discovered.rs  fanout.rs  gossip.rs  health.rs  mod.rs  peer.rs  storage.rs
src/index/: indexer.rs  mod.rs  reader.rs  schema.rs  size.rs  writer.rs
src/middleware/: mod.rs  (+1 more)
tests/: admin_collections_test.rs  admin_config_test.rs  admin_crawl_targets_test.rs  admin_discovered_engines_test.rs  admin_gossip_test.rs  admin_outlinks_test.rs  admin_ranking_test.rs  admin_status_test.rs  admin_ui_test.rs  api_test.rs  auth_test.rs  collections_protocol_version_test.rs  config_test.rs  crawler_test.rs  db_schema_test.rs  db_test.rs  federation_test.rs  gossip_on_peer_add_test.rs  gossip_periodic_test.rs  gossip_test.rs  index_test.rs  peer_version_header_test.rs  rate_limit_test.rs  smoke_test.rs
(+22 files in other folders)
