[package]
name = "community-search"
version = "0.1.1"
edition = "2021"
description = "Self-hosted, federated curated search engine"
license = "AGPL-3.0-or-later"

[features]
testing = []

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tantivy = "0.22"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"
scraper = "0.20"
url = "2.5"
texting_robots = "0.2"
sha2 = "0.10"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
async-trait = "0.1"
eventsource-stream = "0.2"
futures = "0.3"
semver = "1"
quick-xml = "0.36"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full", "test-util"] }
url = "2"
wiremock = "0.6"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
